Compilador_Versão Final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     def_declr -> declaration def_declr
Rule 2     def_declr -> definition def_declr
Rule 3     def_declr -> declaration
Rule 4     def_declr -> definition
Rule 5     program -> def_declr
Rule 6     declaration -> DECL VARIABLE LPAREN varg RPAREN COLON type
Rule 7     declaration -> DECL VARIABLE LPAREN arg RPAREN COLON type
Rule 8     definition -> DEF VARIABLE LPAREN arg RPAREN COLON type block
Rule 9     definition -> DEF VARIABLE LPAREN varg RPAREN COLON type block
Rule 10    varg -> <empty>
Rule 11    arg -> VARIABLE COLON type
Rule 12    arg -> VARIABLE COLON type COMMA arg
Rule 13    argf -> <empty>
Rule 14    arg_f -> expression
Rule 15    arg_f -> expression COMMA arg_f
Rule 16    argument_f -> arg_f
Rule 17    argument_f -> argf
Rule 18    block -> LBRACKET block_content RBRACKET
Rule 19    block -> LBRACKET empty RBRACKET
Rule 20    block_content -> statement block_content
Rule 21    block_content -> statement
Rule 22    statement -> return
Rule 23    statement -> stat_expression
Rule 24    statement -> if
Rule 25    statement -> if_else
Rule 26    statement -> while
Rule 27    statement -> var_decl
Rule 28    statement -> var_ass
Rule 29    statement -> array_decl
Rule 30    statement -> array_ass
Rule 31    statement -> print
Rule 32    statement -> lambda_expression
Rule 33    stat_expression -> expression SEMICOLONS
Rule 34    lambda_expression -> LAMBDA arg COLON expression
Rule 35    lambda_expression -> LAMBDA varg COLON expression
Rule 36    print_helper -> COMMA expression
Rule 37    print_helper -> COMMA expression print_helper
Rule 38    print -> PRINT LPAREN STRING print_helper RPAREN SEMICOLONS
Rule 39    print -> PRINT LPAREN STRING empty RPAREN SEMICOLONS
Rule 40    return -> RETURN SEMICOLONS
Rule 41    return -> RETURN expression SEMICOLONS
Rule 42    return -> RETURN lambda_expression SEMICOLONS
Rule 43    if -> IF expression block
Rule 44    if_else -> IF expression block ELSE block
Rule 45    while -> WHILE expression block
Rule 46    create_array -> CREATE_ARRAY LPAREN expression RPAREN
Rule 47    array_decl -> VARIABLE COLON type LRPAREN expression RRPAREN SEMICOLONS
Rule 48    array_decl -> VARIABLE COLON type EQUALS create_array SEMICOLONS
Rule 49    array_ass -> VARIABLE LRPAREN expression RRPAREN EQUALS expression SEMICOLONS
Rule 50    get_array -> GET_ARRAY LRPAREN VARIABLE RRPAREN
Rule 51    expression -> VARIABLE LRPAREN expression RRPAREN
Rule 52    expression -> get_array LRPAREN expression RRPAREN
Rule 53    var_decl -> VARIABLE COLON type EQUALS expression SEMICOLONS
Rule 54    var_decl -> VARIABLE COLON type EQUALS lambda_expression SEMICOLONS
Rule 55    var_ass -> VARIABLE EQUALS expression SEMICOLONS
Rule 56    var_ass -> VARIABLE EQUALS lambda_expression SEMICOLONS
Rule 57    type -> INT_TYPE
Rule 58    type -> FLOAT_TYPE
Rule 59    type -> STRING_TYPE
Rule 60    type -> BOOL_TYPE
Rule 61    type -> VOID_TYPE
Rule 62    expression -> expression PLUS expression
Rule 63    expression -> expression MINUS expression
Rule 64    expression -> expression TIMES expression
Rule 65    expression -> expression DIVIDE expression
Rule 66    expression -> expression COMP expression
Rule 67    expression -> expression AND expression
Rule 68    expression -> expression OR expression
Rule 69    expression -> expression NOT_EQUALS expression
Rule 70    expression -> expression GREATER_OR_EQUAL expression
Rule 71    expression -> expression LESS_OR_EQUALS expression
Rule 72    expression -> expression GREATER expression
Rule 73    expression -> expression LESS expression
Rule 74    expression -> expression MODULO expression
Rule 75    expression -> MINUS expression
Rule 76    expression -> LPAREN expression RPAREN
Rule 77    expression -> INT
Rule 78    expression -> FLOAT
Rule 79    expression -> STRING
Rule 80    expression -> TRUE
Rule 81    expression -> FALSE
Rule 82    expression -> VARIABLE
Rule 83    expression -> NOT expression
Rule 84    expression -> VARIABLE LPAREN argument_f RPAREN
Rule 85    empty -> <empty>

Terminals, with rules where they appear

AND                  : 67
BOOL_TYPE            : 60
COLON                : 6 7 8 9 11 12 34 35 47 48 53 54
COMMA                : 12 15 36 37
COMP                 : 66
CREATE_ARRAY         : 46
DECL                 : 6 7
DEF                  : 8 9
DIVIDE               : 65
ELSE                 : 44
EQUALS               : 48 49 53 54 55 56
FALSE                : 81
FLOAT                : 78
FLOAT_TYPE           : 58
GET_ARRAY            : 50
GREATER              : 72
GREATER_OR_EQUAL     : 70
IF                   : 43 44
INT                  : 77
INT_TYPE             : 57
LAMBDA               : 34 35
LBRACKET             : 18 19
LESS                 : 73
LESS_OR_EQUALS       : 71
LPAREN               : 6 7 8 9 38 39 46 76 84
LRPAREN              : 47 49 50 51 52
MINUS                : 63 75
MODULO               : 74
NOT                  : 83
NOT_EQUALS           : 69
OR                   : 68
PLUS                 : 62
PRINT                : 38 39
RBRACKET             : 18 19
RETURN               : 40 41 42
RPAREN               : 6 7 8 9 38 39 46 76 84
RRPAREN              : 47 49 50 51 52
SEMICOLONS           : 33 38 39 40 41 42 47 48 49 53 54 55 56
STRING               : 38 39 79
STRING_TYPE          : 59
TIMES                : 64
TRUE                 : 80
VARIABLE             : 6 7 8 9 11 12 47 48 49 50 51 53 54 55 56 82 84
VOID_TYPE            : 61
WHILE                : 45
error                : 

Nonterminals, with rules where they appear

arg                  : 7 8 12 34
arg_f                : 15 16
argf                 : 17
argument_f           : 84
array_ass            : 30
array_decl           : 29
block                : 8 9 43 44 44 45
block_content        : 18 20
create_array         : 48
declaration          : 1 3
def_declr            : 1 2 5
definition           : 2 4
empty                : 19 39
expression           : 14 15 33 34 35 36 37 41 43 44 45 46 47 49 49 51 52 53 55 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 76 83
get_array            : 52
if                   : 24
if_else              : 25
lambda_expression    : 32 42 54 56
print                : 31
print_helper         : 37 38
program              : 0
return               : 22
stat_expression      : 23
statement            : 20 21
type                 : 6 7 8 9 11 12 47 48 53 54
var_ass              : 28
var_decl             : 27
varg                 : 6 9 35
while                : 26

Parsing method: LALR

state 0

    (0) S' -> . program
    (5) program -> . def_declr
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (9) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    DECL            shift and go to state 5
    DEF             shift and go to state 6

    program                        shift and go to state 1
    def_declr                      shift and go to state 2
    declaration                    shift and go to state 3
    definition                     shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (5) program -> def_declr .

    $end            reduce using rule 5 (program -> def_declr .)


state 3

    (1) def_declr -> declaration . def_declr
    (3) def_declr -> declaration .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (9) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 3 (def_declr -> declaration .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    declaration                    shift and go to state 3
    def_declr                      shift and go to state 7
    definition                     shift and go to state 4

state 4

    (2) def_declr -> definition . def_declr
    (4) def_declr -> definition .
    (1) def_declr -> . declaration def_declr
    (2) def_declr -> . definition def_declr
    (3) def_declr -> . declaration
    (4) def_declr -> . definition
    (6) declaration -> . DECL VARIABLE LPAREN varg RPAREN COLON type
    (7) declaration -> . DECL VARIABLE LPAREN arg RPAREN COLON type
    (8) definition -> . DEF VARIABLE LPAREN arg RPAREN COLON type block
    (9) definition -> . DEF VARIABLE LPAREN varg RPAREN COLON type block

    $end            reduce using rule 4 (def_declr -> definition .)
    DECL            shift and go to state 5
    DEF             shift and go to state 6

    definition                     shift and go to state 4
    def_declr                      shift and go to state 8
    declaration                    shift and go to state 3

state 5

    (6) declaration -> DECL . VARIABLE LPAREN varg RPAREN COLON type
    (7) declaration -> DECL . VARIABLE LPAREN arg RPAREN COLON type

    VARIABLE        shift and go to state 9


state 6

    (8) definition -> DEF . VARIABLE LPAREN arg RPAREN COLON type block
    (9) definition -> DEF . VARIABLE LPAREN varg RPAREN COLON type block

    VARIABLE        shift and go to state 10


state 7

    (1) def_declr -> declaration def_declr .

    $end            reduce using rule 1 (def_declr -> declaration def_declr .)


state 8

    (2) def_declr -> definition def_declr .

    $end            reduce using rule 2 (def_declr -> definition def_declr .)


state 9

    (6) declaration -> DECL VARIABLE . LPAREN varg RPAREN COLON type
    (7) declaration -> DECL VARIABLE . LPAREN arg RPAREN COLON type

    LPAREN          shift and go to state 11


state 10

    (8) definition -> DEF VARIABLE . LPAREN arg RPAREN COLON type block
    (9) definition -> DEF VARIABLE . LPAREN varg RPAREN COLON type block

    LPAREN          shift and go to state 12


state 11

    (6) declaration -> DECL VARIABLE LPAREN . varg RPAREN COLON type
    (7) declaration -> DECL VARIABLE LPAREN . arg RPAREN COLON type
    (10) varg -> .
    (11) arg -> . VARIABLE COLON type
    (12) arg -> . VARIABLE COLON type COMMA arg

    RPAREN          reduce using rule 10 (varg -> .)
    VARIABLE        shift and go to state 13

    varg                           shift and go to state 14
    arg                            shift and go to state 15

state 12

    (8) definition -> DEF VARIABLE LPAREN . arg RPAREN COLON type block
    (9) definition -> DEF VARIABLE LPAREN . varg RPAREN COLON type block
    (11) arg -> . VARIABLE COLON type
    (12) arg -> . VARIABLE COLON type COMMA arg
    (10) varg -> .

    VARIABLE        shift and go to state 13
    RPAREN          reduce using rule 10 (varg -> .)

    arg                            shift and go to state 16
    varg                           shift and go to state 17

state 13

    (11) arg -> VARIABLE . COLON type
    (12) arg -> VARIABLE . COLON type COMMA arg

    COLON           shift and go to state 18


state 14

    (6) declaration -> DECL VARIABLE LPAREN varg . RPAREN COLON type

    RPAREN          shift and go to state 19


state 15

    (7) declaration -> DECL VARIABLE LPAREN arg . RPAREN COLON type

    RPAREN          shift and go to state 20


state 16

    (8) definition -> DEF VARIABLE LPAREN arg . RPAREN COLON type block

    RPAREN          shift and go to state 21


state 17

    (9) definition -> DEF VARIABLE LPAREN varg . RPAREN COLON type block

    RPAREN          shift and go to state 22


state 18

    (11) arg -> VARIABLE COLON . type
    (12) arg -> VARIABLE COLON . type COMMA arg
    (57) type -> . INT_TYPE
    (58) type -> . FLOAT_TYPE
    (59) type -> . STRING_TYPE
    (60) type -> . BOOL_TYPE
    (61) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 23

state 19

    (6) declaration -> DECL VARIABLE LPAREN varg RPAREN . COLON type

    COLON           shift and go to state 29


state 20

    (7) declaration -> DECL VARIABLE LPAREN arg RPAREN . COLON type

    COLON           shift and go to state 30


state 21

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN . COLON type block

    COLON           shift and go to state 31


state 22

    (9) definition -> DEF VARIABLE LPAREN varg RPAREN . COLON type block

    COLON           shift and go to state 32


state 23

    (11) arg -> VARIABLE COLON type .
    (12) arg -> VARIABLE COLON type . COMMA arg

    RPAREN          reduce using rule 11 (arg -> VARIABLE COLON type .)
    COLON           reduce using rule 11 (arg -> VARIABLE COLON type .)
    COMMA           shift and go to state 33


state 24

    (57) type -> INT_TYPE .

    COMMA           reduce using rule 57 (type -> INT_TYPE .)
    RPAREN          reduce using rule 57 (type -> INT_TYPE .)
    COLON           reduce using rule 57 (type -> INT_TYPE .)
    DECL            reduce using rule 57 (type -> INT_TYPE .)
    DEF             reduce using rule 57 (type -> INT_TYPE .)
    $end            reduce using rule 57 (type -> INT_TYPE .)
    LBRACKET        reduce using rule 57 (type -> INT_TYPE .)
    EQUALS          reduce using rule 57 (type -> INT_TYPE .)
    LRPAREN         reduce using rule 57 (type -> INT_TYPE .)


state 25

    (58) type -> FLOAT_TYPE .

    COMMA           reduce using rule 58 (type -> FLOAT_TYPE .)
    RPAREN          reduce using rule 58 (type -> FLOAT_TYPE .)
    COLON           reduce using rule 58 (type -> FLOAT_TYPE .)
    DECL            reduce using rule 58 (type -> FLOAT_TYPE .)
    DEF             reduce using rule 58 (type -> FLOAT_TYPE .)
    $end            reduce using rule 58 (type -> FLOAT_TYPE .)
    LBRACKET        reduce using rule 58 (type -> FLOAT_TYPE .)
    EQUALS          reduce using rule 58 (type -> FLOAT_TYPE .)
    LRPAREN         reduce using rule 58 (type -> FLOAT_TYPE .)


state 26

    (59) type -> STRING_TYPE .

    COMMA           reduce using rule 59 (type -> STRING_TYPE .)
    RPAREN          reduce using rule 59 (type -> STRING_TYPE .)
    COLON           reduce using rule 59 (type -> STRING_TYPE .)
    DECL            reduce using rule 59 (type -> STRING_TYPE .)
    DEF             reduce using rule 59 (type -> STRING_TYPE .)
    $end            reduce using rule 59 (type -> STRING_TYPE .)
    LBRACKET        reduce using rule 59 (type -> STRING_TYPE .)
    EQUALS          reduce using rule 59 (type -> STRING_TYPE .)
    LRPAREN         reduce using rule 59 (type -> STRING_TYPE .)


state 27

    (60) type -> BOOL_TYPE .

    COMMA           reduce using rule 60 (type -> BOOL_TYPE .)
    RPAREN          reduce using rule 60 (type -> BOOL_TYPE .)
    COLON           reduce using rule 60 (type -> BOOL_TYPE .)
    DECL            reduce using rule 60 (type -> BOOL_TYPE .)
    DEF             reduce using rule 60 (type -> BOOL_TYPE .)
    $end            reduce using rule 60 (type -> BOOL_TYPE .)
    LBRACKET        reduce using rule 60 (type -> BOOL_TYPE .)
    EQUALS          reduce using rule 60 (type -> BOOL_TYPE .)
    LRPAREN         reduce using rule 60 (type -> BOOL_TYPE .)


state 28

    (61) type -> VOID_TYPE .

    COMMA           reduce using rule 61 (type -> VOID_TYPE .)
    RPAREN          reduce using rule 61 (type -> VOID_TYPE .)
    COLON           reduce using rule 61 (type -> VOID_TYPE .)
    DECL            reduce using rule 61 (type -> VOID_TYPE .)
    DEF             reduce using rule 61 (type -> VOID_TYPE .)
    $end            reduce using rule 61 (type -> VOID_TYPE .)
    LBRACKET        reduce using rule 61 (type -> VOID_TYPE .)
    EQUALS          reduce using rule 61 (type -> VOID_TYPE .)
    LRPAREN         reduce using rule 61 (type -> VOID_TYPE .)


state 29

    (6) declaration -> DECL VARIABLE LPAREN varg RPAREN COLON . type
    (57) type -> . INT_TYPE
    (58) type -> . FLOAT_TYPE
    (59) type -> . STRING_TYPE
    (60) type -> . BOOL_TYPE
    (61) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 34

state 30

    (7) declaration -> DECL VARIABLE LPAREN arg RPAREN COLON . type
    (57) type -> . INT_TYPE
    (58) type -> . FLOAT_TYPE
    (59) type -> . STRING_TYPE
    (60) type -> . BOOL_TYPE
    (61) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 35

state 31

    (8) definition -> DEF VARIABLE LPAREN arg RPAREN COLON . type block
    (57) type -> . INT_TYPE
    (58) type -> . FLOAT_TYPE
    (59) type -> . STRING_TYPE
    (60) type -> . BOOL_TYPE
    (61) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 36

state 32

    (9) definition -> DEF VARIABLE LPAREN varg RPAREN COLON . type block
    (57) type -> . INT_TYPE
    (58) type -> . FLOAT_TYPE
    (59) type -> . STRING_TYPE
    (60) type -> . BOOL_TYPE
    (61) type -> . VOID_TYPE

    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27
    VOID_TYPE       shift and go to state 28

    type                           shift and go to state 37

state 33

    (12) arg -> VARIABLE COLON type COMMA . arg
    (11) arg -> . VARIABLE COLON type
    (12) arg -> . VARIABLE COLON type COMMA arg

    VARIABLE        shift and go to state 13

